# MarioAIAgents-CITS3001

./: .gitignore  1_TrainMario.py  2_RunMario.py  3_RunMarioDeterministic.py  Preliminary Project Notes.docx  PyTorchMario.py  README.md  Report Draft Draft.docx  Report Draft.docx  mario_locate_objects.py  pyproject.toml  ruleBasedMario.py  testMario.py  testcode.py
logs/PPO_1/: events.out.tfevents.1696441164.ConnorPC.12868.0
logs/PPO_2/: events.out.tfevents.1696441338.ConnorPC.20704.0
logs/PPO_3/: events.out.tfevents.1696441456.ConnorPC.4856.0
logs/PPO_4/: events.out.tfevents.1696441689.ConnorPC.24916.0
logs/PPO_5/: events.out.tfevents.1696442686.ConnorPC.7156.0
