[tool.poetry]
name = "cits3001-project"
version = "0.1.0"
description = ""
authors = ["Wally17 <wally.connor17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gym-super-mario-bros = "^7.4.0"
opencv-python = "^4.8.0.76"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
