[tool.poetry]
name = "mario"
version = "0.1.0"
description = "The CITS3001 project with the Super Mario Bros simulation."
authors = ["reilly-23615971 <23615971@student.uwa.edu.au>", "connor-22506057 <22506057@student.uwa.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12, >=3.9"
gym-super-mario-bros = "^7.4.0"
opencv-python = "^4.8.0.76"
nes-py = "^8.2.1"
numpy = "^1.26.1"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
stable-baselines3 = "^2.1.0"
shimmy = "^1.2.1"
tensorboard = "^2.14.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
